Fixed minor table alignment issue on smaller screens

--- a/css/leaderboard.css
+++ b/css/leaderboard.css
@@ -28,7 +28,7 @@
 #main .col-xs-12 > div {
     position: relative;
     overflow: hidden;
-    margin: 0 -25px 0 0;
+    margin: 0 -10px 0 0;
 }
 
 #main table {
